--- a/requirements-freqai.txt
+++ b/requirements-freqai.txt
@@ -5,7 +5,7 @@
 # Required for freqai
 scikit-learn==1.7.2
 joblib==1.5.2
-catboost==1.2.8; 'arm' not in platform_machine
+catboost==1.2.8; 'arm' not in platform_machine and python_version < '3.14'
 lightgbm==4.6.0
 xgboost==3.1.1
 tensorboard==2.20.0
