chore(ci): visualize disk sizes for docker build

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -37,6 +37,9 @@ jobs:
       with:
         persist-credentials: false
 
+    - name: Visualize disk usage before build
+      run: df -h
+
     - name: Set docker tag names
       id: tags
       uses: ./.github/actions/docker-tags
@@ -141,6 +144,9 @@ jobs:
     - name: list Images
       run: |
         docker images
+
+    - name: Visualize disk usage after build
+      run: df -h
 
   deploy-arm:
     name: "Deploy Docker ARM64"
